// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swc-plugin-react-intl-auto Edge cases should handle aliased imports 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as FM } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FM, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Edge cases should handle default imports 1`] = `
"import intl from 'react-intl';
function App() {
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "test.427197390"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Edge cases should handle mixed imports 1`] = `
"import { jsx as _jsx, jsxs as _jsxs } from "react/jsx-runtime";
import { FormattedMessage, defineMessages, useIntl } from 'react-intl';
var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.hello"
    }
});
function App() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            /*#__PURE__*/ _jsx(FormattedMessage, {
                id: "test.433090104",
                defaultMessage: "JSX Message"
            }),
            intl.formatMessage({
                defaultMessage: 'Hook Message',
                "id": "test.2317348113"
            })
        ]
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Edge cases should handle multiple defineMessages calls 1`] = `
"import { defineMessages } from 'react-intl';
var messages1 = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.hello"
    }
});
var messages2 = defineMessages({
    goodbye: {
        defaultMessage: 'Goodbye World',
        "id": "test.goodbye"
    }
});
"
`;

exports[`swc-plugin-react-intl-auto Edge cases should handle nested JSX elements 1`] = `
"import { jsx as _jsx, jsxs as _jsxs } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            /*#__PURE__*/ _jsx(FormattedMessage, {
                id: "test.427197390",
                defaultMessage: "Hello World"
            }),
            /*#__PURE__*/ _jsx("span", {
                children: /*#__PURE__*/ _jsx(FormattedMessage, {
                    id: "test.2848041016",
                    defaultMessage: "Nested message"
                })
            })
        ]
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Error handling should handle empty defineMessages 1`] = `
"import { defineMessages } from 'react-intl';
var messages = defineMessages({});
"
`;

exports[`swc-plugin-react-intl-auto FormattedHTMLMessage JSX elements should add id to FormattedHTMLMessage without id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedHTMLMessage, {
        id: "test.3543894310",
        defaultMessage: "<b>Hello World</b>"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto FormattedMessage JSX elements should add id to FormattedMessage without id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto FormattedMessage JSX elements should handle FormattedMessage with dynamic defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    var message = "Hello World";
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.2502809536",
        defaultMessage: message
    });
}
"
`;

exports[`swc-plugin-react-intl-auto FormattedMessage JSX elements should handle FormattedMessage with key attribute when useKey is true 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.myKey",
        defaultMessage: "Hello World"
    }, "myKey");
}
"
`;

exports[`swc-plugin-react-intl-auto FormattedMessage JSX elements should not add id to FormattedMessage that already has id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "existing.id",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Plugin options should handle custom module source name 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'my-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Plugin options should handle custom separator 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "test_427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Plugin options should handle filebase option 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto Plugin options should handle removePrefix option 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "App.427197390",
        defaultMessage: "Hello World"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto defineMessages function calls should add id to defineMessages object 1`] = `
"import { defineMessages } from 'react-intl';
var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.hello"
    }
});
"
`;

exports[`swc-plugin-react-intl-auto defineMessages function calls should handle defineMessages with includeExportName 1`] = `
"import { defineMessages } from 'react-intl';
export var messages = defineMessages({
    hello: {
        defaultMessage: 'Hello World',
        "id": "test.messages.hello"
    }
});
"
`;

exports[`swc-plugin-react-intl-auto defineMessages function calls should handle defineMessages with string values 1`] = `
"import { defineMessages } from 'react-intl';
var messages = defineMessages({
    hello: {
        "id": "test.hello",
        "defaultMessage": "Hello World"
    }
});
"
`;

exports[`swc-plugin-react-intl-auto formatMessage function calls should add id to formatMessage calls 1`] = `
"import { injectIntl } from 'react-intl';
function MyComponent(param) {
    var intl = param.intl;
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "test.427197390"
    });
}
export default injectIntl(MyComponent);
"
`;

exports[`swc-plugin-react-intl-auto formatMessage function calls should add id to useIntl formatMessage calls 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "test.427197390"
    });
}
"
`;

exports[`swc-plugin-react-intl-auto formatMessage function calls should not add id to formatMessage calls that already have id 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        id: 'existing.id',
        defaultMessage: 'Hello World'
    });
}
"
`;
